Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjObjectRetBoolean.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, Object> yoda
        Object y = yoda:useForce(true, true)
        output "passed"
     end
end
