Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriObjectRetBooleanFail.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, Object> yoda
        boolean y = yoda(true, true, true)
     end
end
